update api-crate
